styles.css
* {
    transition: 0.4s ease-in-out;
} /* Remove this after submission */

[data-theme="catpuccin"] {
    --header-bg-color: rgb(36, 38, 51);
    --footer-bg-color: rgb(36, 38, 51);
    --sidebar-bg-color: rgb(42, 44, 59);
    --primary-text: rgb(200, 208, 242);
    --red-circle: rgb(236, 103, 101);
    --yellow-circle: rgb(241, 189, 68);
    --green-circle: rgb(18, 219, 119);
    --primary-border: rgb(68, 69, 87);
    --file-focus-color: rgb(49, 52, 69);
    --sidebar-hover-bg: rgb(60, 63, 80);
    --content-bg-color: rgb(49, 52, 69);
    --html-icon-color: rgb(213, 92, 38);
    --alert-bg-color: rgb(55, 53, 53);
    --alert-text-color: rgb(224, 201, 151);
    --file-tab-deselected: rgb(30, 32, 42);
    --dim-text: rgb(100, 108, 142);
    --md-icon-color: rgb(94, 163, 239);
    --accent-color: rgb(169, 141, 198);
    --vim-normal-bg: rgb(237, 214, 208);
    --syntax-green: #a6d189;
    --syntax-red: #e78284;
    --syntax-blue: #8caaee;

    --text-2xs: 14px;
    --text-xs: 16px;
    --text-sm: 18px;
    --text-md: 24px;
    --text-lg: 40px;
    --text-xl: 50px;
    --text-2xl: 60px;

    --space-2xs: 4px;
    --space-xs: 8px;
    --space-sm: 16px;
    --space-md: 24px;
    --space-lg: 40px;
} /* All colors and text sizes defined here */

[data-theme="monokai"] {
    --header-bg-color: rgb(60, 58, 62);
    --footer-bg-color: rgb(60, 58, 62);
    --sidebar-bg-color: rgb(50, 48, 52);
    --primary-text: rgb(252, 252, 250);
    --red-circle: rgb(236, 103, 101);
    --yellow-circle: rgb(241, 189, 68);
    --green-circle: rgb(18, 219, 119);
    --primary-border: rgb(70, 68, 72);
    --file-focus-color: rgb(60, 58, 61);
    --sidebar-hover-bg: rgb(60, 58, 61);
    --content-bg-color: rgb(44, 42, 46);
    --html-icon-color: rgb(213, 92, 38);
    --alert-bg-color: rgb(55, 53, 53);
    --alert-text-color: rgb(224, 201, 151);
    --file-tab-deselected: rgb(30, 32, 42);
    --dim-text: rgb(100, 108, 142);
    --md-icon-color: rgb(94, 163, 239);
    --accent-color: rgb(249, 218, 120);
    --vim-normal-bg: rgb(237, 214, 208);
    --syntax-green: rgb(179, 219, 130);
    --syntax-red: rgb(237, 108, 137);
    --syntax-blue: rgb(145, 218, 230);

    --text-2xs: 14px;
    --text-xs: 16px;
    --text-sm: 18px;
    --text-md: 24px;
    --text-lg: 40px;
    --text-xl: 50px;
    --text-2xl: 60px;

    --space-2xs: 4px;
    --space-xs: 8px;
    --space-sm: 16px;
    --space-md: 24px;
    --space-lg: 40px;
} /* Monokai Theme */

[data-theme="github-light"] {
    --header-bg-color: rgb(246, 248, 250);
    --footer-bg-color: rgb(246, 248, 250);
    --sidebar-bg-color: rgb(246, 248, 250);
    --primary-text: rgb(32, 35, 40);
    --red-circle: rgb(236, 103, 101);
    --yellow-circle: rgb(241, 189, 68);
    --green-circle: rgb(18, 219, 119);
    --primary-border: rgb(224, 228, 232);
    --file-focus-color: rgb(232, 235, 238);
    --sidebar-hover-bg: rgb(232, 235, 238);
    --content-bg-color: rgb(255, 255, 255);
    --html-icon-color: rgb(213, 92, 38);
    --alert-bg-color: rgb(246, 248, 250);
    --alert-text-color: rgb(147, 105, 33);
    --file-tab-deselected: rgb(246, 248, 250);
    --dim-text: rgb(100, 108, 142);
    --md-icon-color: rgb(94, 163, 239);
    --accent-color: rgb(224, 228, 232);
    --vim-normal-bg: rgb(91, 99, 109);
    --syntax-green: rgb(45, 97, 48);
    --syntax-red: rgb(190, 53, 54);
    --syntax-blue: rgb(33, 79, 168);

    --text-2xs: 14px;
    --text-xs: 16px;
    --text-sm: 18px;
    --text-md: 24px;
    --text-lg: 40px;
    --text-xl: 50px;
    --text-2xl: 60px;

    --space-2xs: 4px;
    --space-xs: 8px;
    --space-sm: 16px;
    --space-md: 24px;
    --space-lg: 40px;
} /* GitHub Light Theme */

@font-face { /* JetBrains Supremacy */
    font-family: 'JetBrainsMono Nerd Font';
    src: url('JetBrainsMonoNerdFont-Subset.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@media (prefers-reduced-motion: reduce) {
    *, ::before, ::after {
        animation-delay: -1ms !important; /* The delay is set to -1ms so the animation finishes instantly */
        animation-duration: 1ms !important; /* The duration is set to 1ms instead of 0 so the JS does not break */
        scroll-behavior: auto !important; /* Disables smooth scroll on the page */
        transition-duration: 0.1s !important; /* Stripping the transition duration */
        transition-delay: 0s !important; /* Transition delay can be 0. The JS does not break */
    }

    .reveal-section, .timeline-card, .timeline-card p { /* self-explanatory */
        transform: none !important;
        width: 45% !important;
        opacity: 1 !important;
    }
}

body {
    margin: 0;
    font-family: Helvetica, 'Arial', sans-serif;
    color: var(--primary-text);
    height: 100dvh;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    background-color: var(--content-bg-color);
}

a {
    color: var(--primary-text);
    text-decoration: underline;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: var(--space-2xs);
    padding-bottom: var(--space-2xs);
    padding-left: var(--space-xs);
    padding-right: var(--space-xs);
    background-color: var(--header-bg-color);
    border-bottom: 1px solid var(--primary-border);
    font-family: "JetBrainsMono Nerd Font", "Arial", sans-serif;
}

@media screen and (max-width: 395px) {
    header {
        display: none;
    }
}

@keyframes slideHorizontal {
    0% {
        width: 0;
    }

    100% {
        width: 100%;
    }
}

@keyframes slideVertical {
    0% {
        height: 0;
    }

    100% {
    }
}

#header-left {
    display: flex;
    align-items: center;
    gap: var(--space-2xs);
}

#header-right {
    display: flex;
    align-items: center;
    gap: var(--space-2xs);
}

#header-left h1 {
    font-weight: normal;
    margin: 0px;
    margin-left: var(--space-xs);
    font-size: var(--text-2xs);
    line-height: 1;
}
/* ... */

